--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8"></meta>
-    <title>jssgsy.github.io</title>
+    <meta http-equiv="refresh" content="0; url=https://jssgsy.github.io/blog" />
 </head>
-
-<style>
-    p {
-        background-color: red;
-    }
-</style>
 <body>
-<p>this is the content of index.html in jssgsy.github.io</p>
+    <p>Redirecting to <a href="https://jssgsy.github.io/blog/">repository A</a>...</p>
 </body>
 </html>
