--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://jssgsy.github.io/blog" />
+    <script>
+        window.location.href = "https://jssgsy.github.io/blog/";
+    </script>
 </head>
 <body>
     <p>Redirecting to <a href="https://jssgsy.github.io/blog/">repository A</a>...</p>
