--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <script>
-        window.location.href = "https://jssgsy.github.io/blog/";
+        window.location.href = "https://jssgsy.github.io/movie/";
     </script>
 </head>
 <body>
-    <p>Redirecting to <a href="https://jssgsy.github.io/blog/">repository A</a>...</p>
+    <p>Redirecting to <a href="https://jssgsy.github.io/movie/">repository A</a>...</p>
 </body>
 </html>
